# PolarStation

./: .gitignore  LICENSE  README.md  build.sh
PolarAligner/: project.yml
PolarAligner/PolarAligner.xcodeproj/: project.pbxproj
PolarAligner/PolarAlignerTests/: FrameSaverTests.swift  GnomonicProjectionTests.swift  PlateSolverTests.swift  PolarCoreFFITests.swift  SkyMapTests.swift  StarDetectorTests.swift
PolarCore/: Package.swift
StarDetector-Mac/: INFERENCE_GUIDE.md  test_coreml.py
StarDetector-Mac/StarDetector.mlpackage/: Manifest.json
ml-model/: export_coreml.py  generate_training_data.py  train.py
ml-model/StarDetector.mlpackage/: Manifest.json
polar-core/: Cargo.toml
polar-core/polar-catalog-gen/: Cargo.toml
polar-core/polar-core/: Cargo.toml  build.rs
polar-core/polar-core/src/: alpaca_common.rs  coordinates.rs  lib.rs  plate_solver.rs  polar_core.udl  polar_error.rs  time_utils.rs
polar-core/polar-core/src/camera/: alpaca.rs  mod.rs
polar-core/polar-core/src/covercalibrator/: alpaca.rs  mod.rs
polar-core/polar-core/src/dome/: alpaca.rs  mod.rs
polar-core/polar-core/src/filterwheel/: alpaca.rs  mod.rs
polar-core/polar-core/src/focuser/: alpaca.rs  mod.rs
polar-core/polar-core/src/mount/: alpaca.rs  lx200.rs  mod.rs
polar-core/polar-core/src/observingconditions/: alpaca.rs  mod.rs
polar-core/polar-core/src/rotator/: alpaca.rs  mod.rs
polar-core/polar-core/src/safetymonitor/: alpaca.rs  mod.rs
polar-core/polar-core/src/switch/: alpaca.rs  mod.rs
polar-core/swift-bindings/: polar_core.swift  polar_coreFFI.h
(+121 files in other folders)
