[package]
name = "polar-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]
name = "polar_core"

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2"
tetra3 = { path = "../tetra3" }
nalgebra = "0.34"
ureq = "3"
serialport = "4"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
